# CKSDK

./: .gitignore  LICENSE  LICENSE.md  README.md  annotated.html  classes.html  dir_317ea3797c15f4a1d9c156bc812661ca.html  dir_4ff5104d1587f8d3e912c27a88b8edbf.html  dir_8221254afbc6e69ae3bf8539c823958d.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_type.html  functions_u.html  functions_v.html  functions_vars.html  functions_w.html  functions_x.html  functions_y.html  functions_~.html  globals.html  globals_defs.html  (+32 more)
.github/workflows/: main.yml
cmake/: CKSDK.cmake  FindToolchain.cmake  Toolchain.cmake
d0/d33/: structCKSDK_1_1Fixed_1_1extend__integral__type_3_01char_01_4.html
d0/d57/: structCKSDK_1_1OS_1_1SPU__VOICE__CTRL__t.html
d0/d5f/: structCKSDK_1_1SPI_1_1PadResponse-members.html
d0/d67/: structCKSDK_1_1GPU_1_1DisplayEnvironment-members.html
d0/d8f/: structCKSDK_1_1ELF_1_1Elf32__Dyn.html
d0/d9e/: structCKSDK_1_1OS_1_1SIO__CTRL__t-members.html
d0/da7/: structCKSDK_1_1Fixed_1_1extend__integral__type_3_01unsigned_01char_01_4-members.html
d0/dd0/: Hash_8h.html  (+1 more)
docs/: Doxyfile.in
examples/: .gitignore  CMakeLists.txt
examples/Poly/: CMakeLists.txt  Poly.cpp
include/: ctype.h  string.h
ld/: dll.ld  exe.ld
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+101 more)
src/: CKSDK.cpp
tools/: CMakeLists.txt
tools/MkExe/: Bin2h.cpp  Bootstrap.s  CMakeLists.txt  MkExe.cpp  elf.h
tools/MkExe/lz4/: CMakeLists.txt
(+225 files in other folders)
